# Sovereign_Watch

./: .cursorrules  .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .markdownlint.json  .mcp.json  AGENTS.md  BUG_REPORT_v0.9.5.md  CHANGELOG.md  CLAUDE.md  DEPENDENCY_CHANGES.md  README.md  RELEASE_NOTES.md  ROADMAP.md  docker-compose-tools.yml  docker-compose.yml  models.yaml  pyrightconfig.json
.agent/agents/: backend-specialist.md  code-archaeologist.md  data-ingestion-specialist.md  database-architect.md  documentation-writer.md  frontend-specialist.md  geospatial-specialist.md  orchestrator.md  security-auditor.md
.agent/workflows/: release.md
.claude/: settings.json
.github/workflows/: ci.yml
.jules/: palette.md  sentinel.md
Documentation/: AI_Configuration.md  API_Reference.md  Configuration.md  Deployment.md  Development.md  README.md  TAK_Protocol.md  UI_Guide.md
Documentation/pollers/: ADSB.md  AIS.md  Infra.md  Orbital.md  RF.md
agent_docs/: COMPLETED_ARCHIVE.md  DEPENDENCY_CHANGES.md  TIMESCALE_RETENTION.md  frontend-refactoring-report.md  kiwi-arc.md  mcp-agent-playbook.md  z-ordering.md
agent_docs/research/: websdr-integration-investigation.md
agent_docs/tasks/: 2026-03-14-fix-ais-ingestion-pipeline.md  2026-03-15-clean-tactical-labels-overhaul.md  2026-03-15-fix-backend-env-injection.md  2026-03-15-fix-jsx-runtime-error.md  2026-03-15-fix-terminator-layer-v9.md  2026-03-15-listening-post-ui-feature-parity.md  2026-03-15-refine-system-health-toggle-ui.md  (+77 more)
backend/: debug_ioda_structure.py  test_ioda.py  test_ioda_events.py  test_ioda_events_refined.py  test_ioda_summary.py  test_ioda_summary_v2.py
backend/api/: Dockerfile  main.py  pyproject.toml  requirements.txt
backend/api/core/: config.py  database.py
backend/api/models/: schemas.py
backend/api/proto/: tak.proto  tak_pb2.py
backend/api/routers/: analysis.py  gdelt.py  infra.py  jamming.py  news.py  orbital.py  rf.py  satnogs.py  space_weather.py  system.py  tracks.py
backend/api/services/: historian.py  schema_context.py  tak.py
backend/api/tests/: test_cors.py  test_tracks_replay.py  test_tracks_validation.py
backend/api/utils/: sgp4_utils.py
backend/ingestion/aviation_poller/: .dockerignore  Dockerfile  arbitration.py  classification.py  h3_sharding.py  jamming.py  main.py  multi_source_poller.py  opensky_client.py  opensky_watchlist.py  pyproject.toml  requirements.txt  service.py  utils.py  verify_classification.py
backend/ingestion/aviation_poller/tests/: test_classification.py  test_h3_sharding.py  test_opensky_client.py  test_opensky_watchlist.py  test_utils.py
backend/ingestion/orbital_pulse/: Dockerfile  benchmark_parsing.py  pyproject.toml  service.py  utils.py
backend/ingestion/rf_pulse/: Dockerfile  pyproject.toml
backend/ingestion/rf_pulse/sources/: ard.py  fips_states.py  noaa_nwr.py  radioref.py  repeaterbook.py
backend/ingestion/rf_pulse/tests/: test_ard.py  test_noaa_nwr.py  test_repeaterbook.py
backend/ingestion/space_pulse/: main.py  pyproject.toml  service.py
backend/ingestion/space_pulse/sources/: orbital.py  satnogs_db.py  satnogs_network.py  space_weather.py
backend/ingestion/space_pulse/tests/: test_orbital.py  test_satnogs_db.py  test_satnogs_network.py  test_space_weather.py
docs/: BUG_AUDIT_REPORT_2026-03-01.md  GAP_ANALYSIS_2026-03-06.md  SATELLITE-DASHBOARD-RESEARCH.md  TIMESCALE_RETENTION.md  TacticalMap_Modularization_Report.docx  configurable-stream-settings.md  jules_changes.md  kiwisdr-architecture.md  orbital-improvements-plan.md
frontend/: Dockerfile  LINT_DEFERRED.md  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  postcss.config.js  tsconfig.json  vite.config.ts
js8call/: Dockerfile  entrypoint.sh  kiwi_client.py  kiwi_directory.py  manual_test_kiwi.py  manual_test_wvm.py  pyproject.toml  server.py  test_kiwi.py  websdr_directory.py
js8call/tests/: test_json.py  test_kiwi.py  test_kiwi_compatibility.py  test_kiwi_debounce.py  test_ws.py
nginx/: nginx.conf
tools/: README.md  audit-deps.sh  check-mcp-context.sh  inject-z-ordering.sh  run-ci-checks.ps1
(+237 files in other folders)
