[project]
name = "sovereign-watch-js8call-bridge"
version = "0.1.0"
description = "Sovereign Watch JS8Call bridge server"
requires-python = ">=3.10"

dependencies = [
    "fastapi==0.135.1",
    "uvicorn[standard]==0.42.0",
    # pyjs8call: JS8Call TCP API client. Latest available on PyPI is 0.2.3.
    # NOTE: The previous requirement (>=0.9.0) was unsatisfiable — no version
    # >= 0.9.0 has ever been published on PyPI. Pinned to actual latest.
    "pyjs8call==0.2.3",
    "websockets==16.0",
    "aiohttp==3.13.3",
]
