[project]
name = "sovereign-watch-api"
version = "0.1.0"
description = "Sovereign Watch backend API service"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.135.1",
    "uvicorn[standard]==0.42.0",
    "asyncpg==0.31.0",
    "pgvector==0.4.2",
    "litellm==1.82.2",
    "pydantic==2.12.5",
    "pydantic-settings==2.13.1",
    "python-dotenv==1.2.2",
    "sse-starlette==3.3.2",
    "aiokafka==0.13.0",
    # protobuf pinned to 6.33.5: grpcio-tools==1.78.0 requires protobuf<7.0.0
    "protobuf==6.33.5",
    "grpcio-tools==1.78.0",
    "websockets==16.0",
    "redis==7.3.0",
    "sgp4==2.25",
    "numpy==2.4.3",
    "httpx==0.28.1",
    "pyyaml==6.0.3",
]

[dependency-groups]
dev = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
]
