[project]
name = "sovereign-watch-aviation-poller"
version = "0.1.0"
description = "Sovereign Watch aviation ingestion poller"
requires-python = ">=3.12"
dependencies = [
    "aiohttp==3.13.3",
    "aiolimiter==1.2.1",
    "tenacity==9.1.4",
    "h3==4.4.2",
    "redis==7.3.0",
    "aiokafka==0.13.0",
    "uvloop==0.22.1 ; sys_platform != 'win32'",
    "python-dotenv==1.2.2",
]

[dependency-groups]
dev = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    # [aioredis] extra was dropped in fakeredis 2.x; async support is built-in
    "fakeredis==2.34.1",
]
