[project]
name = "sovereign-watch-rf-pulse"
version = "0.1.0"
description = "Sovereign Watch RF/SDR ingestion poller"
requires-python = ">=3.12"
dependencies = [
    "aiokafka==0.13.0",
    # [asyncio] extra was removed in redis 7.x; async support is now built-in
    "redis==7.3.0",
    "aiohttp==3.13.3",
    "beautifulsoup4==4.14.3",
    "lxml==6.0.2",
    "python-dotenv==1.2.2",
]

[dependency-groups]
dev = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
]
